--- a/1start/src/App.css
+++ b/1start/src/App.css
@@ -1,60 +1,20 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.nav{
+    background-color: #333;
+    color: white;
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+.navInr{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .container{
+    width: 80%;
+    margin: auto;
+  } 
+  .nav ul{
+      display: flex;
+      gap: 20px;
+      list-style-type: none;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-.products{
-  display: grid;gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-.page{
-  display: flex;
-  align-items: flex-start;
-  gap: 20px;
-}
-.cartContaint{
-  min-width: 300px;
-}
-
-button:disabled{
-  opacity: .1;
-  cursor: not-allowed;
-}
