--- a/1start/src/App.css
+++ b/1start/src/App.css
@@ -2,6 +2,8 @@
     background-color: #333;
     color: white;
     width: 100%;
+    position: sticky;
+    top: 0;
   }
 .navInr{
     display: flex;
@@ -18,3 +20,44 @@
       gap: 20px;
       list-style-type: none;
   }
+.form{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+.page{
+  padding: 50px 0px;
+}
+.form input{
+  height: 40px;
+  padding: 0 10px;
+}
+.form select{
+  height: 40px;
+  padding: 0 10px;
+}
+.products{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 10px;
+}
+.product{
+  border: 1px solid #ffffff88;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  justify-content: space-between;
+}
+.product .text{
+  padding: 5px 10px;
+}
+
+.product .text h3{
+  font-size: 18px;
+}
+
+.cartContaint h2{
+margin-bottom: 20px;
+}
