--- a/1start/src/App.css
+++ b/1start/src/App.css
@@ -53,11 +53,27 @@
 .product .text{
   padding: 5px 10px;
 }
-
+.product img{
+  max-width: 80%;
+  width: 100%;
+  height: auto;
+  max-height: 150px;
+  margin: auto;
+  object-fit: contain;
+  margin: 8px auto;
+}
 .product .text h3{
   font-size: 18px;
+color: #fff;
 }
-
+.product .text p{
+  color: #fff;
+}
 .cartContaint h2{
 margin-bottom: 20px;
+color: #fff;
+}
+.producDetails{
+  display: flex;
+  gap: 10px;
 }
