--- a/1start/src/App.css
+++ b/1start/src/App.css
@@ -77,3 +77,73 @@ color: #fff;
   display: flex;
   gap: 10px;
 }
+
+.quantity{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  border: 1px solid #1a1a1a;
+  &>*{
+    flex: 1;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background: #fff;
+    &::after{
+      content: '';
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 16px;
+      transform: translate(-50%,-50%);
+      height: 16px;
+      background: url(../public/icons.png);
+      background-size: 512px 512px;
+      background-repeat: no-repeat;
+    }
+  }
+  p{
+    &::after{
+      display: none;
+    }
+  }
+  .delete::after{
+    background-position: -472px -403px;
+  }
+  .decrease::after{
+    background-position: -463px -421px;
+  }
+  .increase::after{
+    background-position: -454px -403px;
+  }
+}
+
+.formOtr{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100svh - 76px);
+}
+.formOtr form{
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+}
+.formOtr form h1{
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+.formOtr form label{
+  display: block;
+  margin-bottom: 5px;
+}
+.filed{
+  margin-bottom: 20px;
+}
+.formOtr form input{
+  width: 100%;
+  height: 40px;
+  padding: 0px 10px;
+}
